CSS/style.css
/*General CSS for ALL webpages*/
    /*header*/

    /*body*/

    /*footer*/


    body {
      background-color: white;
      padding: 0px;
      margin: 0;
      height: 100%;
      width: 100%;
            }
    
    h1, h3 {
            text-align: center;
            }
    h1 {
        font-size: 35px;
        font-family: Tahoma;
        }
    h2 {
        font-size: 30px;
        text-decoration: ;
        }
    h3 {
        font-size: 25px;
        }
    
    .contact {
       text-align: center;
    }
    
    #top-buttons {
      width: 100%;
    }
    
    button {
      display: inline-block;
      background-color: #0BA5BE;
      width: 19.35%;
      min-width: 90px;
      min-height: 50px;
      font-size: 1vw;
      font-family: sanserif;
      font-weight: bold;
      text-align: center;
      border: 0;
      border-radius: 10px;
      margin: auto;
      color: #013F4E;
      justify-items: space-around;
    
           }
    button:hover {
            background-color: #013F4E;
            color: #0BA5BE;
            text-decoration: none;
           }
    
    button:visited {
      color: white;
      background-color: #0BA5BE;
      text-decoration: none;
    }
    
    button:active {
      color: white;
      background-color: #0BA5BE;
      text-decoration: none;
    }
    
    img.headshot {
      width: 300px;
      height: 300px;
      border-radius: 150px;
      float: right;
      margin-right: 30px;
    
    }
    
    img.team-photo {
      display: block;
      width: 150px;
      height: 150px;
      border-radius: 75px;
      margin: auto;
      text-align: center;
    }
    
    a {
      text-decoration: none;
      color: #013F4E;
    }
    
    a:hover {
      color: #0BA5BE;
    }
    
    hr {
        background-color: #00718F;
        border: solid white;
        height: 1px;
        padding: 0px;
      width: 100%;
      margin: 0;
    
        }
    
    div {
      margin: 0;
    }
    
    main {
      width: 100%;
      margin: 0;
    }
    
    .heading {
      text-align: center;
          background-color: #00718F;
          color: black;
          padding: 15px 0px 15px 0px;
      margin: auto;
    
         }
    
    footer {
      margin: 15px 0 15px 30px;
    }
    
    .top-bar {
      background-color: #faf0e6;
      text-indent: 30px;
      padding: 30px;
      margin: 25px;
      border-radius: 20px;
         }
    
    .team-top-bar {
      background-color: #faf0e6;
      padding: 30px;
      margin: 25px;
      border-radius: 20px;
         }
    
    .cv-top-bar {
      background-color: #faf0e6;
      text-indent: 30px;
      padding: 30px;
      margin: 25px;
      border-radius: 40px;
    }
    
    .contact-top-bar {
      background-color: #faf0e6;
      padding: 30px;
      margin: 25px auto 20px auto;
      border-radius: 20px;
      width: 70%;
      min-width: 200px;
    }

    section1 {
      width: 100%;
      height: 100vh;
      margin: 0;
      font-family: Tahoma;
    }
    
    form {
      width: 60vw;
      max-width: 500px;
      min-width: 300px;
      margin: 0 auto;
      padding-bottom: 2em;
    }
    
    fieldset {
      border: none;
      padding: 2rem 0;
    }
    
    fieldset:last-of-type {
      border-bottom: none;
    }
    
    label {
      display: block;
      margin: 0.5rem 0;
    }
    
    input,
    textarea,
    select {
      margin: 10px 0 0 0;
      width: 100%;
      min-height: 2em;
    }
    
    input, textarea {
      background-color: white;
      border: 1px solid #0BA5BE;
      color: black;
    }
    
    .inline {
      width: unset;
      margin: 0 0.5em 0 0;
      vertical-align: middle;
    }
    
    input[type="submit"] {
      display: block;
      width: 60%;
      margin: 1em auto;
      height: 2em;
      font-size: 1.1rem;
      background-color: #00718F;
      border-color: #0BA5BE;
      min-width: 300px;
    }
    
    input[type="file"] {
      padding: 1px 2px;
    }
    
    section1.team {
      text-align: center;
    }
    
    h4 {
      font-size: 20px;
      margin: 20px 0 0 0;
    }
    
    p.citation {
      text-indent: 0;
      margin: 10px 30px 10px 30px;
    }
    
    /*Contact Page*/
    
    
    /*Curriculum Vitae Page*/
    .CV-text {
      font-size: 20px;
      margin-left: 30px;
      margin-right: 30px;
    }


    /*Team page*/
    .ps {
      width: 80%;
      text-align: left;
      margin-left: auto;
      margin-right: auto;
      align-items: center;
    }
    
    .team-description {
      font-size: 20px;
    }

    .personal-statement {
      margin-left: auto;
      margin-right: auto;
      font-size: 20px;
    }
    
    .cv-link {
      padding: 10px;
    }
    
    /*Blog Page*/
    .blog-title {
      margin-left: 30px;
      width: 100%
    }
    
    .main-article{
      display: flex;
      flex-direction: column;
      position: relative;
      margin-left: 15px;
    }
    
    .blog-links {
      margin-left: auto;
      margin-right: auto;
      padding: 10px;
      background-color: white;
      display: flex;
      flex-direction: row;
      width: 20%;
      justify-content: center;
      text-indent: 0px;
    }
    
    .collapsible {
      background-color: #0BA5BE;
      color: black;
      cursor: pointer;
      padding: 18px;
      width: 100%;
      border: none;
      text-align: center;
      outline: none;
      font-size: 25px;
      margin-top: 15px;
      margin-bottom: 10px;
      border-radius: 0;
    }
    
    .content {
      padding: 0 18px;
      max-height: 0;
      overflow: hidden;
      transition: max-height 0.2s ease-out;
      background-color: #faf0e6;
      text-indent: 0;
      font-size: 20px;
    }
    
    .article-title {
      color: black;
    }
    .article-title:hover {
      color: black;
    }
    
    .active, .collapsible:hover {
      background-color: #0BA5BE;
      color: black;
    }
    
    .collapsible:after {
      content: '\02795'; /* Unicode character for "plus" sign (+) */
      font-size: 13px;
      color: black;
      float: right;
      margin-left: 5px;
    }
    
    .active:after {
      content: "\2796"; /* Unicode character for "minus" sign (-) */
    }
    
    .resources {
      margin-bottom: 0;
    }
    
    ol {
      margin: 0;
    }

    /*Documents Html*/
    img.download-image {
      width: 250px;
      height: 125px;
    }

